fix all controller web page
