# src/app/api-svc/model/models.ts
@@ -1,7 +1,9 @@
 export * from './apiResponseGenreDTO';
 export * from './apiResponseLoginResponseDTO';
+export * from './apiResponseSongDTO';
 export * from './apiResponseUserDTO';
 export * from './genreDTO';
 export * from './loginRequestDTO';
 export * from './loginResponseDTO';
+export * from './songDTO';
 export * from './userDTO';
