# src/app/api-svc/model/songDTO.ts
@@ -1,0 +1,22 @@
+/**
+ * Visum app
+ * The API for the Visum music web project
+ *
+ * The version of the OpenAPI document: v2
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+export interface SongDTO { 
+    id?: string;
+    title?: string;
+    image?: string;
+    thumbnail?: string;
+    genre?: object;
+    vip?: boolean;
+}
+
